add swag doc
