# api/rest/tx.go
@@ -8,7 +8,11 @@ import (
 
 type TxController struct {
 }
-
+// @Summary 通过hash查询交易
+// @Description 通过hash查询交易
+// @Param tx_hash path string true "hash"
+// @Tags transaction
+// @Router /tx/hash/{tx_hash} [get]
 func (txctl *TxController) QueryByHash(c *gin.Context) {
 	txhash := c.Param("tx_hash")
 	if txhash == "" {
@@ -24,6 +28,12 @@ func (txctl *TxController) QueryByHash(c *gin.Context) {
 
 	c.JSON(http.StatusOK, response.Success(res))
 }
+
+// @Summary 查询区块的所有交易
+// @Description 查询区块的所有交易
+// @Param block_height path int true "height"
+// @Tags transaction
+// @Router /tx/block_txs/{block_height} [get]
 func (txctl *TxController) QueryTxsByBlockHeight(c *gin.Context) {
 	blkHeight := c.Param("block_height")
 	if blkHeight == "" {
@@ -39,7 +49,10 @@ func (txctl *TxController) QueryTxsByBlockHeight(c *gin.Context) {
 
 	c.JSON(http.StatusOK, response.Success(res))
 }
-
+// @Summary 查询最近10笔交易
+// @Description 查询最近10笔交易，用在首页展示
+// @Tags transaction
+// @Router /tx/ltxs [get]
 func (txctl *TxController) QueryLTxs(c *gin.Context) {
 
 	res, e := txService.GetLTxs()
@@ -50,8 +63,14 @@ func (txctl *TxController) QueryLTxs(c *gin.Context) {
 
 	c.JSON(http.StatusOK, response.Success(res))
 }
+
+// @Summary 查询最近交易
+// @Description 查询最近交易，最多可以查询50笔
+// @Param num query		int	false	"number"
+// @Tags transaction
+// @Router /tx/txs [get]
 func (txctl *TxController) QueryTxs(c *gin.Context) {
-	q_num := c.DefaultQuery("size", "10")
+	q_num := c.DefaultQuery("num", "10")
 
 	res, e := txService.GetTxs(q_num)
 	if e != nil {
